exact overlap header space fix.

--- a/client/src/assets/styles/components/form.scss
+++ b/client/src/assets/styles/components/form.scss
@@ -1,6 +1,6 @@
 .form {
   width: 600px;
-  margin: 8em auto 3em;
+  margin: calc(var(--header-height) + 6em) auto 3em;
   box-shadow: 0 0 2px 1px rgba($color: #000000, $alpha: 0.2);
   padding: 2em;
   border-radius: 5px;
