--- a/client/src/components/pages/Dashboard/Dashboard.scss
+++ b/client/src/components/pages/Dashboard/Dashboard.scss
@@ -1,5 +1,5 @@
 .dashboard {
-  padding-top: calc(58px + 2em);
+  padding-top: calc(var(--header-height) + 2em);
   padding-bottom: 4em;
 
   &__container {
