--- a/client/src/components/pages/Profiles/helpers/ProfileList.scss
+++ b/client/src/components/pages/Profiles/helpers/ProfileList.scss
@@ -4,8 +4,7 @@
   display: grid;
   width: 80vw;
   margin: 0 auto;
-  padding-top: 9em;
-  padding-bottom: 150px;
+  padding-top: calc(var(--header-height) + 4em);
   justify-content: center;
 
   grid-template-columns: repeat(3, minmax(250px, 330px));
